[project]
name = "venv"
version = "0.1.0"
description = "Environment with JAX and related libraries"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "jax[cuda13]",
    "optax>=0.2.6",
    "flax>=0.12.0",
    "chex>=0.1.87",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "tensorboard>=2.20.0",
    "tensorboardX",
    "noise",
    "pandas",
]

[tool.uv]
